# embassy-rp-tcp-ip

./: Cargo.toml  README.md
src/: host.py  main.rs
