[package]
name = "embassy-rp-skeleton"
version = "0.1.1"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.6", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2", features = ["defmt", "time-driver"] }
embassy-net = {version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns"]}
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
rand = { version = "0.8.5", default-features = false }
static_cell = "2.1.0"
portable-atomic = { version = "1.7.0", features = ["critical-section"] }
fixedvec = "0.2.4"
heapless = "0.8.0"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[profile.dev]
lto = true
